# MalTree

./: CMakeLists.txt  Cipher.cpp  Cipher.h  Config.h  PCClient.cpp  PCClient.h  PRGTest.cpp  PRGTest.h  README.md  Tree.h  Utils.cpp  Utils.h  a.out  client  client.cpp  clientResult.txt  communication_cost.cpp  in.txt  main  main.cpp  main1.cpp  mpResult.txt  online_computation_cost  online_computation_cost.cpp  onlinecomp.txt  result  servers_fs.txt  tesTT.cpp  test  test.cpp  testTime.cpp
